--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 asgiref==3.5.2
+attrs==22.1.0
 Django==4.1.2
+django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
+exceptiongroup==1.0.3
 greenlet==1.1.3.post0
+iniconfig==1.1.1
 mysql-connector-python==8.0.30
+packaging==21.3
+Pillow==9.2.0
+pluggy==1.0.0
 protobuf==3.20.1
 Pygments==2.13.0
 PyMySQL==1.0.2
+pyparsing==3.0.9
+pytest==7.2.0
 pytz==2022.4
 SQLAlchemy==1.4.41
 sqlparse==0.4.3
+tomli==2.0.1
